# bigint-class

./: main.cpp  test.txt
a4/: CMakeLists.txt  README.md  compile
a4/bigint/: bigint.cpp  bigint.h
catch/: catch.hpp
